--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-petStoreUserModule" class="navigator-link ">
-                    <span>C:\Users\Dasun\RestAssured\PetStoreProject\testng.xml</span>
+                    <span>C:\Users\Dasun\RestAssured\PetStoreProject\userModule.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,47 +103,47 @@
                     <div class="method-list-content passed suite-petStoreUserModule">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.DataDrivenTest" class="method navigator-link" hash-for-method="testCreateUser(10002, tstuser2, Bhagya, Peries, bp@gmail.com, Bp@123, 102356569)">testCreateUser(10002, tstuser2, Bhagya, Peries, bp@gmail.com, Bp@123, 102356569)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.UserTest" class="method navigator-link" hash-for-method="testCreateUser(10002, tstuser2, Bhagya, Peries, bp@gmail.com, Bp@123, 102356569)">testCreateUser(10002, tstuser2, Bhagya, Peries, bp@gmail.com, Bp@123, 102356569)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.DataDrivenTest" class="method navigator-link" hash-for-method="testCreateUser(10003, tstuser3, Lahiru, Dushmantha, ld@gmail.com, Ld@123, 458796321)">testCreateUser(10003, tstuser3, Lahiru, Dushmantha, ld@gmail.com, Ld@123, 458796321)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.UserTest" class="method navigator-link" hash-for-method="testCreateUser(10003, tstuser3, Lahiru, Dushmantha, ld@gmail.com, Ld@123, 458796321)">testCreateUser(10003, tstuser3, Lahiru, Dushmantha, ld@gmail.com, Ld@123, 458796321)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.DataDrivenTest" class="method navigator-link" hash-for-method="testCreateUser(10001, tstuser1, Dasun, wedamulla, dw@gmail.com, Dw@123, 123456789)">testCreateUser(10001, tstuser1, Dasun, wedamulla, dw@gmail.com, Dw@123, 123456789)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.UserTest" class="method navigator-link" hash-for-method="testCreateUser(10001, tstuser1, Dasun, wedamulla, dw@gmail.com, Dw@123, 123456789)">testCreateUser(10001, tstuser1, Dasun, wedamulla, dw@gmail.com, Dw@123, 123456789)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.DataDrivenTest" class="method navigator-link" hash-for-method="testDeleteUser(tstuser1)">testDeleteUser(tstuser1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.UserTest" class="method navigator-link" hash-for-method="testDeleteUser(tstuser1)">testDeleteUser(tstuser1)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.DataDrivenTest" class="method navigator-link" hash-for-method="testDeleteUser(tstuser3)">testDeleteUser(tstuser3)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.UserTest" class="method navigator-link" hash-for-method="testDeleteUser(tstuser3)">testDeleteUser(tstuser3)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.DataDrivenTest" class="method navigator-link" hash-for-method="testDeleteUser(tstuser2)">testDeleteUser(tstuser2)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.UserTest" class="method navigator-link" hash-for-method="testDeleteUser(tstuser2)">testDeleteUser(tstuser2)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.DataDrivenTest" class="method navigator-link" hash-for-method="testGetUser(tstuser1)">testGetUser(tstuser1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.UserTest" class="method navigator-link" hash-for-method="testGetUser(tstuser1)">testGetUser(tstuser1)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.DataDrivenTest" class="method navigator-link" hash-for-method="testGetUser(tstuser3)">testGetUser(tstuser3)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.UserTest" class="method navigator-link" hash-for-method="testGetUser(tstuser3)">testGetUser(tstuser3)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.DataDrivenTest" class="method navigator-link" hash-for-method="testGetUser(tstuser2)">testGetUser(tstuser2)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-petStoreUserModule" title="com.api.tests.UserTest" class="method navigator-link" hash-for-method="testGetUser(tstuser2)">testGetUser(tstuser2)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-petStoreUserModule -->
@@ -161,7 +161,7 @@
           <div class="suite-petStoreUserModule-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.api.tests.DataDrivenTest</span>
+              <span class="class-name">com.api.tests.UserTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -241,7 +241,7 @@
         </div> <!-- panel petStoreUserModule -->
         <div panel-name="test-xml-petStoreUserModule" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dasun\RestAssured\PetStoreProject\testng.xml</span>
+            <span class="header-content">C:\Users\Dasun\RestAssured\PetStoreProject\userModule.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -253,7 +253,7 @@
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.api.tests.DataDrivenTest&quot;/&gt;
+      &lt;class name=&quot;com.api.tests.UserTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- petStoreUserModule --&gt;
@@ -296,40 +296,40 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(9);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testCreateUser')
-data.setCell(0, 2, 'com.api.tests.DataDrivenTest')
-data.setCell(0, 3, 2961);
+data.setCell(0, 2, 'com.api.tests.UserTest')
+data.setCell(0, 3, 3064);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testGetUser')
-data.setCell(1, 2, 'com.api.tests.DataDrivenTest')
-data.setCell(1, 3, 1145);
+data.setCell(1, 2, 'com.api.tests.UserTest')
+data.setCell(1, 3, 1157);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testCreateUser')
-data.setCell(2, 2, 'com.api.tests.DataDrivenTest')
+data.setCell(2, 1, 'testGetUser')
+data.setCell(2, 2, 'com.api.tests.UserTest')
 data.setCell(2, 3, 1106);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testDeleteUser')
-data.setCell(3, 2, 'com.api.tests.DataDrivenTest')
-data.setCell(3, 3, 1105);
+data.setCell(3, 1, 'testGetUser')
+data.setCell(3, 2, 'com.api.tests.UserTest')
+data.setCell(3, 3, 1101);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testCreateUser')
-data.setCell(4, 2, 'com.api.tests.DataDrivenTest')
-data.setCell(4, 3, 1101);
+data.setCell(4, 1, 'testDeleteUser')
+data.setCell(4, 2, 'com.api.tests.UserTest')
+data.setCell(4, 3, 1099);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'testDeleteUser')
-data.setCell(5, 2, 'com.api.tests.DataDrivenTest')
-data.setCell(5, 3, 1101);
+data.setCell(5, 1, 'testCreateUser')
+data.setCell(5, 2, 'com.api.tests.UserTest')
+data.setCell(5, 3, 1099);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'testDeleteUser')
-data.setCell(6, 2, 'com.api.tests.DataDrivenTest')
-data.setCell(6, 3, 1100);
+data.setCell(6, 2, 'com.api.tests.UserTest')
+data.setCell(6, 3, 1087);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'testGetUser')
-data.setCell(7, 2, 'com.api.tests.DataDrivenTest')
-data.setCell(7, 3, 1091);
+data.setCell(7, 1, 'testCreateUser')
+data.setCell(7, 2, 'com.api.tests.UserTest')
+data.setCell(7, 3, 1085);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'testGetUser')
-data.setCell(8, 2, 'com.api.tests.DataDrivenTest')
-data.setCell(8, 3, 1087);
+data.setCell(8, 1, 'testDeleteUser')
+data.setCell(8, 2, 'com.api.tests.UserTest')
+data.setCell(8, 3, 1083);
 window.suiteTableData['petStoreUserModule']= { tableData: data, tableDiv: 'times-div-petStoreUserModule'}
 return data;
 }
@@ -360,46 +360,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.api.tests.DataDrivenTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.api.tests.UserTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">init</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">testCreateUser(10001, tstuser1, Dasun, wedamulla, dw@gmail.com, Dw@123, 123456789)</span>
-                <span class="method-start">1994 ms</span>
+                <span class="method-start">1909 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testCreateUser(10002, tstuser2, Bhagya, Peries, bp@gmail.com, Bp@123, 102356569)</span>
-                <span class="method-start">4968 ms</span>
+                <span class="method-start">4991 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testCreateUser(10003, tstuser3, Lahiru, Dushmantha, ld@gmail.com, Ld@123, 458796321)</span>
-                <span class="method-start">6071 ms</span>
+                <span class="method-start">6092 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testGetUser(tstuser1)</span>
-                <span class="method-start">7251 ms</span>
+                <span class="method-start">7254 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testGetUser(tstuser2)</span>
-                <span class="method-start">8397 ms</span>
+                <span class="method-start">8413 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testGetUser(tstuser3)</span>
-                <span class="method-start">9489 ms</span>
+                <span class="method-start">9515 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testDeleteUser(tstuser1)</span>
-                <span class="method-start">10645 ms</span>
+                <span class="method-start">10704 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testDeleteUser(tstuser2)</span>
-                <span class="method-start">11751 ms</span>
+                <span class="method-start">11805 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testDeleteUser(tstuser3)</span>
-                <span class="method-start">12852 ms</span>
+                <span class="method-start">12889 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
